# coda-mcp

./: .env.example  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.claude/skills/coda-io-mcp/: SKILL.md
coda_mcp/: config.py  dependencies.py  http_errors.py  server.py  validation.py
coda_mcp/client/: __init__.py  automations.py  client.py  common.py  doc_structure.py  docs.py  folders.py  formulas_controls.py  miscellaneous.py  tables.py  workspaces.py
coda_mcp/models/: __init__.py  analytics.py  automations.py  common.py  docs.py  folders.py  formulas_controls.py  misc.py  pages.py  tables.py  tools.py  workspaces.py
coda_mcp/tools/: __init__.py  analytics.py  automations.py  creation.py  docs.py  folders.py  management.py  pages.py  permissions.py  structure.py  tables.py
