[project]
name = "coda-io-mcp"
version = "0.1.0"
description = "A Coda.io MCP server built with FastMCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
coda-mcp = "coda_mcp.server:main"
coda-mcp-http = "coda_mcp.server:main_http"

[tool.hatch.build.targets.wheel]
packages = ["coda_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "ruff>=0.15.7",
]
